다섯번째_자유게시판(pom.xml/config.xml 작성)

--- a/SquidQuiz/pom.xml
+++ b/SquidQuiz/pom.xml
@@ -150,7 +150,12 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
-	
+		<!-- Path contains invalid character 로 인한 오류 >> dependency추가 -->
+		<dependency>
+			<groupId>xerces</groupId>
+			<artifactId>xercesImpl</artifactId>
+			<version>2.9.1</version>
+		</dependency>
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
